--- a/gentrification-calc/gentrification-calc.csproj
+++ b/gentrification-calc/gentrification-calc.csproj
@@ -236,12 +236,17 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="DAL\CalcContext.cs" />
+    <Compile Include="DAL\CalcRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\DemographicModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\ZipCodeModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
