--- a/gentrification-calc/gentrification-calc.csproj
+++ b/gentrification-calc/gentrification-calc.csproj
@@ -48,6 +48,10 @@
       <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.2.14.3.0\lib\net45\CsvHelper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.0.1011, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.0\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -253,11 +257,16 @@
     <Compile Include="Migrations\201606010016418_InitialCreate.Designer.cs">
       <DependentUpon>201606010016418_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606132227113_AddedRaceSeedData.cs" />
+    <Compile Include="Migrations\201606132227113_AddedRaceSeedData.Designer.cs">
+      <DependentUpon>201606132227113_AddedRaceSeedData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\DemographicModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\PopulationYearModels.cs" />
     <Compile Include="Models\ZipCodeModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
@@ -338,6 +347,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201606010016418_InitialCreate.resx">
       <DependentUpon>201606010016418_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201606132227113_AddedRaceSeedData.resx">
+      <DependentUpon>201606132227113_AddedRaceSeedData.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
