--- a/gentrification-calc/gentrification-calc.csproj
+++ b/gentrification-calc/gentrification-calc.csproj
@@ -335,6 +335,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="DAL\SeedData\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
