--- a/gentrification-calc/Views/Web.config
+++ b/gentrification-calc/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="gentrification_calc" />
+        <add namespace="GentrificationCalc" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
