--- a/gentrification-calc/GentrificationCalc.csproj
+++ b/gentrification-calc/GentrificationCalc.csproj
@@ -277,7 +277,7 @@
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <EmbeddedResource Include="DAL\ACS2011Cleaned.csv">
+    <EmbeddedResource Include="DAL\SeedData\ACS2011Cleaned.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <Content Include="favicon.ico" />
@@ -309,7 +309,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <EmbeddedResource Include="DAL\ACS_2012_Cleaned.csv">
+    <EmbeddedResource Include="DAL\SeedData\ACS_2012_Cleaned.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="DAL\SeedData\ACS_2013_Cleaned.csv" />
