--- a/gentrification-calc/GentrificationCalc.csproj
+++ b/gentrification-calc/GentrificationCalc.csproj
@@ -49,7 +49,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
-      <HintPath>..\packages\CsvHelper.2.14.3.0\lib\net45\CsvHelper.dll</HintPath>
+      <HintPath>..\packages\CsvHelper.2.15.0.0\lib\net45\CsvHelper.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.0.1011, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -253,13 +253,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201606010016418_InitialCreate.cs" />
-    <Compile Include="Migrations\201606010016418_InitialCreate.Designer.cs">
-      <DependentUpon>201606010016418_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201606132227113_AddedRaceSeedData.cs" />
-    <Compile Include="Migrations\201606132227113_AddedRaceSeedData.Designer.cs">
-      <DependentUpon>201606132227113_AddedRaceSeedData.cs</DependentUpon>
+    <Compile Include="Migrations\201606151810296_InitialCreate.cs" />
+    <Compile Include="Migrations\201606151810296_InitialCreate.Designer.cs">
+      <DependentUpon>201606151810296_InitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
@@ -272,12 +268,15 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
+    <EmbeddedResource Include="Migrations\201606151810296_InitialCreate.resx">
+      <DependentUpon>201606151810296_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <EmbeddedResource Include="DAL\SeedData\ACS2011Cleaned.csv">
+    <EmbeddedResource Include="DAL\SeedData\ACS_2011_Cleaned.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <Content Include="favicon.ico" />
@@ -314,9 +313,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DAL\SeedData\ACS_2013_Cleaned.csv" />
     <EmbeddedResource Include="DAL\SeedData\ACS_2014_Cleaned.csv" />
-    <EmbeddedResource Include="App_Data\ACS2011Cleaned.csv">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -344,7 +340,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -352,14 +350,6 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201606010016418_InitialCreate.resx">
-      <DependentUpon>201606010016418_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201606132227113_AddedRaceSeedData.resx">
-      <DependentUpon>201606132227113_AddedRaceSeedData.cs</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
