zip code information not seeding

--- a/gentrification-calc/GentrificationCalc.csproj
+++ b/gentrification-calc/GentrificationCalc.csproj
@@ -253,6 +253,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201606161755559_InitialDatabase.cs" />
+    <Compile Include="Migrations\201606161755559_InitialDatabase.Designer.cs">
+      <DependentUpon>201606161755559_InitialDatabase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -264,6 +268,9 @@
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
+    <EmbeddedResource Include="Migrations\201606161755559_InitialDatabase.resx">
+      <DependentUpon>201606161755559_InitialDatabase.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
