--- a/gentrification-calc.Tests/GentrificationCalc.Tests.csproj
+++ b/gentrification-calc.Tests/GentrificationCalc.Tests.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
+    <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.Routing" />
