Zipcode TopoJSON Objects Rendering to Map

--- a/gentrification-calc/GentrificationCalc.csproj
+++ b/gentrification-calc/GentrificationCalc.csproj
@@ -245,9 +245,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <EmbeddedResource Include="Controllers\Api\AccountController.cs" />
-    <Compile Include="Controllers\Web\HomeController.cs" />
-    <Compile Include="Controllers\Api\ValuesController.cs" />
+    <EmbeddedResource Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\JsonFileController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Controllers\ZipCodeController.cs" />
     <Compile Include="DAL\CalcContext.cs" />
     <Compile Include="DAL\CalcRepository.cs" />
     <Compile Include="Global.asax.cs">
@@ -320,6 +322,7 @@
     <EmbeddedResource Include="DAL\SeedData\ACS2013_Cleaned.csv" />
     <EmbeddedResource Include="DAL\SeedData\ACS2014_Cleaned.csv" />
     <Content Include="Scripts\angular.min.js.map" />
+    <Content Include="App_Data\zipData.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -350,7 +353,9 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="Controllers\Api\" />
+    <Folder Include="Controllers\Web\" />
+    <Folder Include="Scripts\data\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
