--- a/gentrification-calc/GentrificationCalc.csproj
+++ b/gentrification-calc/GentrificationCalc.csproj
@@ -248,6 +248,7 @@
     <EmbeddedResource Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\JsonFileController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PopulationYearController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Controllers\ZipCodeController.cs" />
     <Compile Include="DAL\CalcContext.cs" />
@@ -353,8 +354,6 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controllers\Api\" />
-    <Folder Include="Controllers\Web\" />
     <Folder Include="Scripts\data\" />
   </ItemGroup>
   <ItemGroup>
